# notion-mcp

./: .assess-fix-timestamp  .cursorrules  .env.example  .gitignore  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CURSOR_FIX.md  CURSOR_MCP_CONFIG.md  INSTALL.md  Makefile  README.md  UPGRADE_SUMMARY.md  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  notion-mcp-backend.spec  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.txt  run_server.py  server.py  start.bat  start.ps1
.github/workflows/: ci.yml
.lancedb/notion_notes.lance/_transactions/: 0-91f34739-4c4d-4867-938f-fce2d52fc3fb.txn
.windsurf/docs/Artificial_Intelligence/papers/: download_all_papers.ps1  download_papers.ps1
config/: notion_config.yaml  settings.yaml
docs/: API.md  Configuration.md  Troubleshooting.md  about-notion.md  note-apps-comparison.md
docs/assess-reports/: 2026-07-21.md
docs/glama/: GLAMA_AI_REQUIREMENTS.md  GOLD_STATUS_ACHIEVEMENT.md  README.md
docs/testing/: MEGATEST_CONCEPT.md  MEGATEST_FRAMEWORK_COMPLETE.md  MEGATEST_LOCATION_AND_CLEANUP.md  MEGATEST_QUICK_REFERENCE.md  MEGATEST_SAFETY_GUARANTEES.md  MEGATEST_THREE_USE_CASES.md  UNIVERSAL_MCP_MEGATEST_GUIDE.md
mcpb/: manifest.json
mcpb/assets/prompts/: system.md  user.md
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs
native/windows/: hooks.nsh
notion/: automations.py  client.py  databases.py  pages.py
notion_mcp/: __init__.py  ai.py  auth.py  automations.py  client.py  collaboration.py  databases.py  pages.py  plugins.py  transport.py  web.py  workers.py
notion_mcp/rag/: indexer.py  orchestrator.py  vector_db.py
notion_mcp/skills/notion-expert/: SKILL.md
scripts/: check-repo-standards.ps1  cua-nsis-config.json
tests/: __init__.py  integration_tests.py  test_api.py
web_sota/: index.html  package-lock.json  package.json  start.ps1  start.ps1.bak.20260508_202256  vite.config.ts
web_sota/.lancedb/notion_notes.lance/_transactions/: 0-d9ddaf7a-b091-4f81-b1a0-9d8e80c5688b.txn
web_sota/src/: App.tsx
web_sota/src/common/: speech-service.ts
web_sota/src/components/auth/: auth-setup.tsx
web_sota/src/components/layout/: sidebar.tsx
web_sota/src/components/ui/: select.tsx  switch.tsx
web_sota/src/pages/: Logging.tsx  chat.tsx  dashboard.tsx  data.tsx  explorer.tsx  help.tsx  plugins.tsx  search.tsx  settings.tsx  status.tsx  tools.tsx
